towards serialization of routes; pulling signatures out of legs/episodes